--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "license": "ISC",
   "dependencies": {
     "chai": "^4.3.6",
-    "chai-spies": "^1.0.0",
-    "mocha": "^9.2.0"
+    "chai-spies": "^1.0.0"
+  },
+  "devDependencies": {
+    "mocha": "^10.0.0"
   }
 }
